--- a/styles/search.scss
+++ b/styles/search.scss
@@ -1,3 +1,8 @@
+$fontMonstserrat : Montserrat, sans-serif;
+$fontInter : inter, sans-serif;
+$fontManrope : manrope, sans-serif;
+$fontOpenSans : open-sans, sans-serif;
+
 
 body{
     #img-div{
